--- a/.dockerignore
+++ b/.dockerignore
@@ -10,6 +10,8 @@
 !az.completion
 # Make an exception for the license file
 !LICENSE.txt
+# Make an exception for docker related files
+!docker/*
 # Exclude build droppings, as mentioned in .gitignore
 src/build*
 # Exclude tests
