try and bring in node os upgrade channel from preview https://github.com/Azure/azure-cli-extensions/pull/5788/files
update linter

revert history

try and clean up whitespace

bad whitespace

security pathc is not ga yet

--- a/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
@@ -43,6 +43,9 @@ aks create:
       enable_windows_recording_rules:
         rule_exclusions:
         - option_length_too_long
+      node_os_upgrade_channel:
+        rule_exclusions:
+        - option_length_too_long
 
 aks enable-addons:
   parameters:
@@ -105,4 +108,7 @@ aks update:
       enable_windows_recording_rules:
           rule_exclusions:
           - option_length_too_long
+      node_os_upgrade_channel:
+        rule_exclusions:
+        - option_length_too_long
 ...
