--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,6 +31,7 @@
             "args": [
                 //"--help"
                 "interactive"
+                //"keyvault create --resource-group 'myResourceGroup' --'testKeyvault' --location 'eastus'"
             ],
             "console": "externalTerminal",
             "debugOptions": [
