Generalizing error messages to validation errors

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -37,7 +37,8 @@
             "debugOptions": [
                 "WaitOnAbnormalExit",
                 "WaitOnNormalExit"
-            ]
+            ],
+            "justMyCode": false
         },
         {
             "name": "Azdev Scripts",
