Appears to deal with location vm issues decently.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,6 +31,7 @@
             "args": [
                 //"--help"
                 "interactive"
+                //"vm create --resource-group 't-interns2' --name 'testVM' --image Win2022DataCenter --location 'eastu'"
                 //"keyvault create --resource-group 'myResourceGroup' --'testKeyvault' --location 'eastus'"
             ],
             "console": "externalTerminal",
