--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,122 @@
-# basic
 setuptools>=65.5.1
 pip>=9.0.1
+antlr4-python3-runtime~=4.9.3
+applicationinsights<0.12,>=0.11.1
+argcomplete~=3.1.1
+azure-appconfiguration~=1.1.1
+azure-batch~=14.0.0
+azure-cli-core==2.51.0
+azure-cli-telemetry==1.1.0.*
+azure-cosmos>=3.0.2,~=3.0
+azure-datalake-store~=0.0.49
+azure-data-tables==12.4.0
+azure-graphrbac~=0.60.0
+azure-keyvault~=1.1.0
+azure-keyvault-administration==4.3.0
+azure-keyvault-certificates==4.7.0
+azure-keyvault-keys==4.8.0b2
+azure-keyvault-secrets==4.7.0
+azure-loganalytics~=0.1.0
+azure-mgmt-advisor==9.0.0
+azure-mgmt-apimanagement==4.0.0
+azure-mgmt-appconfiguration==3.0.0
+azure-mgmt-appcontainers==2.0.0
+azure-mgmt-applicationinsights~=1.0.0
+azure-mgmt-authorization~=3.0.0
+azure-mgmt-batch~=17.0.0
+azure-mgmt-batchai==7.0.0b1
+azure-mgmt-billing==6.0.0
+azure-mgmt-botservice~=2.0.0b3
+azure-mgmt-cdn==12.0.0
+azure-mgmt-cognitiveservices~=13.5.0
+azure-mgmt-compute~=30.0.0
+azure-mgmt-consumption~=2.0
+azure-mgmt-containerinstance==10.1.0
+azure-mgmt-containerregistry==10.1.0
+azure-mgmt-containerservice~=25.0.0
+azure-mgmt-core<2,>=1.2.0
+azure-mgmt-cosmosdb==9.2.0
+azure-mgmt-databoxedge~=1.0.0
+azure-mgmt-datalake-store~=0.5.0
+azure-mgmt-datamigration~=10.0.0
+azure-mgmt-devtestlabs~=4.0
+azure-mgmt-dns~=8.0.0
+azure-mgmt-eventgrid==10.2.0b2
+azure-mgmt-eventhub~=10.1.0
+azure-mgmt-extendedlocation==1.0.0b2
+azure-mgmt-hdinsight~=9.0.0
+azure-mgmt-imagebuilder~=1.2.0
+azure-mgmt-iotcentral~=10.0.0b1
+azure-mgmt-iothub==2.3.0
+azure-mgmt-iothubprovisioningservices==1.1.0
+azure-mgmt-keyvault==10.2.3
+azure-mgmt-kusto~=0.3.0
+azure-mgmt-loganalytics==13.0.0b4
+azure-mgmt-managedservices~=1.0
+azure-mgmt-managementgroups~=1.0.0
+azure-mgmt-maps~=2.0.0
+azure-mgmt-marketplaceordering==1.1.0
+azure-mgmt-media~=9.0
+azure-mgmt-monitor~=5.0.0
+azure-mgmt-msi~=7.0.0
+azure-mgmt-netapp~=10.0.0
+azure-mgmt-policyinsights==1.1.0b4
+azure-mgmt-privatedns~=1.0.0
+azure-mgmt-rdbms~=10.2.0b10
+azure-mgmt-recoveryservices~=2.4.0
+azure-mgmt-recoveryservicesbackup~=6.0.0
+azure-mgmt-redhatopenshift~=1.2.0
+azure-mgmt-redis~=14.1.0
+azure-mgmt-relay~=0.1.0
+azure-mgmt-resource==23.1.0b2
+azure-mgmt-search~=9.0
+azure-mgmt-security==5.0.0
+azure-mgmt-servicebus~=8.2.0
+azure-mgmt-servicefabric~=1.0.0
+azure-mgmt-servicefabricmanagedclusters~=1.0.0
+azure-mgmt-servicelinker==1.2.0b1
+azure-mgmt-signalr==1.1.0
+azure-mgmt-sql==4.0.0b10
+azure-mgmt-sqlvirtualmachine==1.0.0b5
+azure-mgmt-storage~=21.0.0
+azure-mgmt-synapse==2.1.0b5
+azure-mgmt-trafficmanager~=1.0.0
+azure-mgmt-web==7.0.0
+azure-multiapi-storage~=1.2.0
+azure-storage-common~=1.4
+azure-synapse-accesscontrol~=0.5.0
+azure-synapse-artifacts~=0.15.0
+azure-synapse-managedprivateendpoints~=0.4.0
+azure-synapse-spark~=0.2.0
+chardet~=3.0.4
+colorama~=0.4.4
+cryptography
+distro
+distro
+fabric~=2.4
+humanfriendly~=10.0
+javaproperties~=0.5.1
+jmespath
+jsondiff~=2.0.0
+knack~=0.11.0
+msal[broker]==1.24.0b1
+msal-extensions~=1.0.0
+msrestazure~=0.6.4
+packaging>=20.9
+packaging>=20.9
+paramiko<4.0.0,>=2.0.8
+pkginfo>=1.5.0.1
+portalocker<3,>=1.6
+psutil~=5.9
+PyGithub~=1.38
+PyJWT>=2.1.0
+PyNaCl~=1.5.0
+pyopenssl>=17.1.0
+requests[socks]
+scp~=0.13.2
+semver==2.13.0
+six>=1.10.0
+sshtunnel~=0.1.4
+urllib3
+websocket-client~=1.3.1
+xmltodict~=0.12
