--- a/Dockerfile.azure
+++ b/Dockerfile.azure
@@ -25,7 +25,7 @@ LABEL maintainer="Microsoft" \
 
 
 # Azure Linux does not contain Mozilla CA certificates, install ca-certificates package to prevent CERTIFICATE_VERIFY_FAILED errors, see https://github.com/Azure/azure-cli/issues/26026
-RUN --mount=type=bind,target=/azure-cli.rpm,source=./docker/azure-cli.rpm pwd && ls && tdnf install ca-certificates /azure-cli.rpm -y && tdnf clean all
+RUN --mount=type=bind,target=/azure-cli.rpm,source=./docker/azure-cli.rpm tdnf install ca-certificates /azure-cli.rpm -y && tdnf clean all
 
 ENV AZ_INSTALLER=DOCKER
 CMD bash
