{CI} Update azure-client-tools-bot's auto-reply to be more friendly (#27112)
* Update config.yml

* bump for action rerun

* rebump for action rerun

--- a/.github/azure-client-tools-bot/config.yml
+++ b/.github/azure-client-tools-bot/config.yml
@@ -97,4 +97,4 @@ cli_common_issues:
 
         ${currentVersion} is not the latest Azure CLI(${latestVersion}).
 
-        Please upgrade to the latest Azure CLI version by following https://learn.microsoft.com/en-us/cli/azure/update-azure-cli.
+        If you haven't already attempted to do so, please upgrade to the latest Azure CLI version by following https://learn.microsoft.com/en-us/cli/azure/update-azure-cli.
