Passing raw command for two error paths

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -39,7 +39,7 @@
                 "WaitOnAbnormalExit",
                 "WaitOnNormalExit"
             ],
-            "justMyCode": false
+            //"justMyCode": false
         },
         {
             "name": "Azdev Scripts",
