Recognizes syntax errors but does not detect custom parameter issues such as non-existent resource group. Secret placeholders replaced with env variables.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,15 +31,17 @@
             "args": [
                 //"--help"
                 "interactive"
-                //"vm create --resource-group 't-interns2' --name 'testVM' --image Win2022DataCenter --location 'eastu'"
-                //"keyvault create --resource-group 'myResourceGroup' --'testKeyvault' --location 'eastus'"
             ],
             "console": "externalTerminal",
             "debugOptions": [
                 "WaitOnAbnormalExit",
                 "WaitOnNormalExit"
             ],
-            //"justMyCode": false
+            "env": {
+                "API_KEY": "",
+                "ENDPOINT": "",
+                "DEPLOYMENT": ""
+            }
         },
         {
             "name": "Azdev Scripts",
