create\update custom

--- a/src/azure-cli/azure/cli/command_modules/monitor/tests/latest/recordings/test_monitor_create_full_fledged_activity_log_alert.yaml
+++ b/src/azure-cli/azure/cli/command_modules/monitor/tests/latest/recordings/test_monitor_create_full_fledged_activity_log_alert.yaml
@@ -13,21 +13,21 @@ interactions:
       ParameterSetName:
       - -n -o
       User-Agent:
-      - AZURECLI/2.39.0 azsdk-python-azure-mgmt-resource/21.1.0b1 Python/3.9.5 (Windows-10-10.0.19044-SP0)
+      - AZURECLI/2.51.0 azsdk-python-azure-mgmt-resource/23.1.0b2 Python/3.10.6 (macOS-13.5-x86_64-i386-64bit)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/clitest.rg000001?api-version=2022-09-01
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001","name":"clitest.rg000001","type":"Microsoft.Resources/resourceGroups","location":"southcentralus","tags":{"product":"azurecli","cause":"automation","date":"2022-08-04T01:42:34Z"},"properties":{"provisioningState":"Succeeded"}}'
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001","name":"clitest.rg000001","type":"Microsoft.Resources/resourceGroups","location":"southcentralus","tags":{"product":"azurecli","cause":"automation","test":"test_monitor_create_full_fledged_activity_log_alert","date":"2023-08-25T16:00:34Z","module":"monitor"},"properties":{"provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '318'
+      - '398'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 04 Aug 2022 01:42:37 GMT
+      - Fri, 25 Aug 2023 16:00:37 GMT
       expires:
       - '-1'
       pragma:
@@ -42,7 +42,7 @@ interactions:
       code: 200
       message: OK
 - request:
-    body: '{"location": "global", "properties": {"groupShortName": "cliact3yptob",
+    body: '{"location": "Global", "properties": {"groupShortName": "cliactip5vob",
       "enabled": true, "emailReceivers": [], "smsReceivers": [], "webhookReceivers":
       [], "itsmReceivers": [], "azureAppPushReceivers": [], "automationRunbookReceivers":
       [], "voiceReceivers": [], "logicAppReceivers": [], "azureFunctionReceivers":
@@ -63,33 +63,45 @@ interactions:
       ParameterSetName:
       - -n -g -o
       User-Agent:
-      - AZURECLI/2.39.0 azsdk-python-azure-mgmt-monitor/4.0.1 Python/3.9.5 (Windows-10-10.0.19044-SP0)
+      - AZURECLI/2.51.0 azsdk-python-azure-mgmt-monitor/5.0.0 Python/3.10.6 (macOS-13.5-x86_64-i386-64bit)
     method: PUT
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Insights/actionGroups/cliact000002?api-version=2022-06-01
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/microsoft.insights/actionGroups/cliact000002","type":"Microsoft.Insights/ActionGroups","name":"cliact000002","location":"Global","kind":null,"tags":null,"properties":{"groupShortName":"cliact3yptob","enabled":true,"tags":null,"emailReceivers":[],"smsReceivers":[],"webhookReceivers":[],"eventHubReceivers":[],"itsmReceivers":[],"azureAppPushReceivers":[],"automationRunbookReceivers":[],"voiceReceivers":[],"logicAppReceivers":[],"azureFunctionReceivers":[],"armRoleReceivers":[]},"identity":null}'
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/microsoft.insights/actionGroups/cliact000002","type":"Microsoft.Insights/ActionGroups","name":"cliact000002","location":"Global","kind":null,"tags":null,"properties":{"groupShortName":"cliactip5vob","enabled":true,"emailReceivers":[],"smsReceivers":[],"webhookReceivers":[],"eventHubReceivers":[],"itsmReceivers":[],"azureAppPushReceivers":[],"automationRunbookReceivers":[],"voiceReceivers":[],"logicAppReceivers":[],"azureFunctionReceivers":[],"armRoleReceivers":[]},"identity":null}'
     headers:
+      access-control-expose-headers:
+      - x-activityid
+      api-supported-versions:
+      - 2016-09-01-preview, 2017-03-01-preview, 2017-04-01, 2018-03-01, 2018-09-01,
+        2019-03-01, 2019-06-01, 2021-09-01, 2022-04-01, 2022-06-01, 2023-01-01, 2023-03-01-preview,
+        2023-05-01-preview, 2023-05-01
       cache-control:
       - no-cache
       content-length:
-      - '598'
+      - '586'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 04 Aug 2022 01:42:43 GMT
+      - Fri, 25 Aug 2023 16:00:44 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
       server:
-      - Microsoft-IIS/10.0
+      - Microsoft-HTTPAPI/2.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
+      x-activityid:
+      - 88bcb260-4360-11ee-a6ef-acde48001122
       x-content-type-options:
       - nosniff
+      x-frame-options:
+      - SAMEORIGIN
       x-ms-ratelimit-remaining-subscription-resource-requests:
       - '24'
+      x-servedby:
+      - WUS2ONEIM000001
     status:
       code: 201
       message: Created
@@ -107,7 +119,49 @@ interactions:
       ParameterSetName:
       - -n -g -s --action --condition --disable -o
       User-Agent:
-      - AZURECLI/2.39.0 azsdk-python-azure-mgmt-monitor/4.0.1 Python/3.9.5 (Windows-10-10.0.19044-SP0)
+      - AZURECLI/2.51.0 azsdk-python-azure-mgmt-resource/23.1.0b2 Python/3.10.6 (macOS-13.5-x86_64-i386-64bit)
+    method: GET
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/clitest.rg000001?api-version=2022-09-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001","name":"clitest.rg000001","type":"Microsoft.Resources/resourceGroups","location":"southcentralus","tags":{"product":"azurecli","cause":"automation","test":"test_monitor_create_full_fledged_activity_log_alert","date":"2023-08-25T16:00:34Z","module":"monitor"},"properties":{"provisioningState":"Succeeded"}}'
+    headers:
+      cache-control:
+      - no-cache
+      content-length:
+      - '398'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Fri, 25 Aug 2023 16:00:45 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      vary:
+      - Accept-Encoding
+      x-content-type-options:
+      - nosniff
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - monitor activity-log alert create
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -n -g -s --action --condition --disable -o
+      User-Agent:
+      - AZURECLI/2.51.0 (AAZ) azsdk-python-core/1.26.0 Python/3.10.6 (macOS-13.5-x86_64-i386-64bit)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/microsoft.insights/activityLogAlerts/clialert000003?api-version=2017-04-01
   response:
@@ -123,7 +177,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 04 Aug 2022 01:42:43 GMT
+      - Fri, 25 Aug 2023 16:00:45 GMT
       expires:
       - '-1'
       pragma:
@@ -138,11 +192,11 @@ interactions:
       code: 404
       message: Not Found
 - request:
-    body: '{"location": "global", "properties": {"scopes": ["/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001"],
-      "condition": {"allOf": [{"field": "category", "equals": "Security"}, {"field":
-      "level", "equals": "Error"}]}, "actions": {"actionGroups": [{"actionGroupId":
-      "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/microsoft.insights/actionGroups/cliact000002"}]},
-      "enabled": false}}'
+    body: '{"location": "Global", "properties": {"actions": {"actionGroups": [{"actionGroupId":
+      "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/microsoft.insights/actionGroups/cliact000002",
+      "webhookProperties": {}}]}, "condition": {"allOf": [{"equals": "Security", "field":
+      "category"}, {"equals": "Error", "field": "level"}]}, "enabled": false, "scopes":
+      ["/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001"]}}'
     headers:
       Accept:
       - application/json
@@ -153,40 +207,42 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '457'
+      - '482'
       Content-Type:
       - application/json
       ParameterSetName:
       - -n -g -s --action --condition --disable -o
       User-Agent:
-      - AZURECLI/2.39.0 azsdk-python-azure-mgmt-monitor/4.0.1 Python/3.9.5 (Windows-10-10.0.19044-SP0)
+      - AZURECLI/2.51.0 (AAZ) azsdk-python-core/1.26.0 Python/3.10.6 (macOS-13.5-x86_64-i386-64bit)
     method: PUT
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/microsoft.insights/activityLogAlerts/clialert000003?api-version=2017-04-01
   response:
     body:
-      string: "{\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/microsoft.insights/activityLogAlerts/clialert000003\",\r\n
-        \ \"name\": \"clialert000003\",\r\n  \"type\": \"Microsoft.Insights/ActivityLogAlerts\",\r\n
-        \ \"location\": \"Global\",\r\n  \"properties\": {\r\n    \"scopes\": [\r\n
-        \     \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001\"\r\n
-        \   ],\r\n    \"condition\": {\r\n      \"allOf\": [\r\n        {\r\n          \"field\":
-        \"category\",\r\n          \"equals\": \"Security\"\r\n        },\r\n        {\r\n
-        \         \"field\": \"level\",\r\n          \"equals\": \"Error\"\r\n        }\r\n
-        \     ]\r\n    },\r\n    \"actions\": {\r\n      \"actionGroups\": [\r\n        {\r\n
-        \         \"actionGroupId\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/microsoft.insights/actionGroups/cliact000002\"\r\n
-        \       }\r\n      ]\r\n    },\r\n    \"enabled\": false\r\n  }\r\n}"
+      string: "{\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/microsoft.insights/activityLogAlerts/clialert000003\"\
+        ,\r\n  \"name\": \"clialert000003\",\r\n  \"type\": \"Microsoft.Insights/ActivityLogAlerts\"\
+        ,\r\n  \"location\": \"Global\",\r\n  \"properties\": {\r\n    \"scopes\"\
+        : [\r\n      \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001\"\
+        \r\n    ],\r\n    \"condition\": {\r\n      \"allOf\": [\r\n        {\r\n\
+        \          \"field\": \"category\",\r\n          \"equals\": \"Security\"\r\
+        \n        },\r\n        {\r\n          \"field\": \"level\",\r\n         \
+        \ \"equals\": \"Error\"\r\n        }\r\n      ]\r\n    },\r\n    \"actions\"\
+        : {\r\n      \"actionGroups\": [\r\n        {\r\n          \"actionGroupId\"\
+        : \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/microsoft.insights/actionGroups/cliact000002\"\
+        ,\r\n          \"webhookProperties\": {}\r\n        }\r\n      ]\r\n    },\r\
+        \n    \"enabled\": false\r\n  }\r\n}"
     headers:
       api-supported-versions:
-      - 2017-03-01-preview, 2017-04-01, 2020-10-01
+      - 2017-03-01-preview, 2017-04-01, 2020-10-01, 2023-01-01-preview
       arr-disable-session-affinity:
       - 'true'
       cache-control:
       - no-cache
       content-length:
-      - '904'
+      - '940'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 04 Aug 2022 01:42:49 GMT
+      - Fri, 25 Aug 2023 16:00:50 GMT
       expires:
       - '-1'
       pragma:
@@ -200,7 +256,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-writes:
-      - '1198'
+      - '1199'
       x-powered-by:
       - ASP.NET
     status:
@@ -220,36 +276,38 @@ interactions:
       ParameterSetName:
       - -g -o
       User-Agent:
-      - AZURECLI/2.39.0 azsdk-python-azure-mgmt-monitor/4.0.1 Python/3.9.5 (Windows-10-10.0.19044-SP0)
+      - AZURECLI/2.51.0 (AAZ) azsdk-python-core/1.26.0 Python/3.10.6 (macOS-13.5-x86_64-i386-64bit)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/microsoft.insights/activityLogAlerts?api-version=2017-04-01
   response:
     body:
-      string: "{\r\n  \"value\": [\r\n    {\r\n      \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/microsoft.insights/activityLogAlerts/clialert000003\",\r\n
-        \     \"name\": \"clialert000003\",\r\n      \"type\": \"Microsoft.Insights/ActivityLogAlerts\",\r\n
-        \     \"location\": \"Global\",\r\n      \"tags\": {},\r\n      \"properties\":
-        {\r\n        \"scopes\": [\r\n          \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001\"\r\n
-        \       ],\r\n        \"condition\": {\r\n          \"allOf\": [\r\n            {\r\n
-        \             \"field\": \"category\",\r\n              \"equals\": \"Security\"\r\n
-        \           },\r\n            {\r\n              \"field\": \"level\",\r\n
-        \             \"equals\": \"Error\"\r\n            }\r\n          ]\r\n        },\r\n
-        \       \"actions\": {\r\n          \"actionGroups\": [\r\n            {\r\n
-        \             \"actionGroupId\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/microsoft.insights/actionGroups/cliact000002\"\r\n
-        \           }\r\n          ]\r\n        },\r\n        \"enabled\": false\r\n
-        \     }\r\n    }\r\n  ]\r\n}"
+      string: "{\r\n  \"value\": [\r\n    {\r\n      \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/microsoft.insights/activityLogAlerts/clialert000003\"\
+        ,\r\n      \"name\": \"clialert000003\",\r\n      \"type\": \"Microsoft.Insights/ActivityLogAlerts\"\
+        ,\r\n      \"location\": \"Global\",\r\n      \"properties\": {\r\n      \
+        \  \"scopes\": [\r\n          \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001\"\
+        \r\n        ],\r\n        \"condition\": {\r\n          \"allOf\": [\r\n \
+        \           {\r\n              \"field\": \"category\",\r\n              \"\
+        equals\": \"Security\"\r\n            },\r\n            {\r\n            \
+        \  \"field\": \"level\",\r\n              \"equals\": \"Error\"\r\n      \
+        \      }\r\n          ]\r\n        },\r\n        \"actions\": {\r\n      \
+        \    \"actionGroups\": [\r\n            {\r\n              \"actionGroupId\"\
+        : \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/microsoft.insights/actionGroups/cliact000002\"\
+        ,\r\n              \"webhookProperties\": {}\r\n            }\r\n        \
+        \  ]\r\n        },\r\n        \"enabled\": false\r\n      }\r\n    }\r\n \
+        \ ]\r\n}"
     headers:
       api-supported-versions:
-      - 2017-03-01-preview, 2017-04-01, 2020-10-01
+      - 2017-03-01-preview, 2017-04-01, 2020-10-01, 2023-01-01-preview
       arr-disable-session-affinity:
       - 'true'
       cache-control:
       - no-cache
       content-length:
-      - '1072'
+      - '1093'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 04 Aug 2022 01:42:50 GMT
+      - Fri, 25 Aug 2023 16:00:51 GMT
       expires:
       - '-1'
       pragma:
@@ -258,10 +316,8 @@ interactions:
       - Microsoft-IIS/10.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      transfer-encoding:
-      - chunked
       vary:
-      - Accept-Encoding,Accept-Encoding
+      - Accept-Encoding
       x-aspnet-version:
       - 4.0.30319
       x-content-type-options:
@@ -283,7 +339,7 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - AZURECLI/2.39.0 azsdk-python-azure-mgmt-monitor/4.0.1 Python/3.9.5 (Windows-10-10.0.19044-SP0)
+      - AZURECLI/2.51.0 (AAZ) azsdk-python-core/1.26.0 Python/3.10.6 (macOS-13.5-x86_64-i386-64bit)
     method: GET
     uri: https://management.azure.com/providers/Microsoft.Insights/eventcategories?api-version=2015-04-01
   response:
@@ -299,7 +355,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 04 Aug 2022 01:42:52 GMT
+      - Fri, 25 Aug 2023 16:00:51 GMT
       expires:
       - '-1'
       pragma:
