--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,7 @@
             "program": "${workspaceRoot}/src/azure-cli/azure/cli/__main__.py",
             "cwd": "${workspaceRoot}",
             "args": [
-                //"--help"
-                "interactive"
+                "--help"
             ],
             "console": "integratedTerminal",
             "debugOptions": [
@@ -29,19 +28,13 @@
             "program": "${workspaceRoot}/src/azure-cli/azure/cli/__main__.py",
             "cwd": "${workspaceRoot}",
             "args": [
-                //"--help"
-                "interactive"
+                "--help"
             ],
             "console": "externalTerminal",
             "debugOptions": [
                 "WaitOnAbnormalExit",
                 "WaitOnNormalExit"
-            ],
-            "env": {
-                "API_KEY": "",
-                "ENDPOINT": "",
-                "DEPLOYMENT": ""
-            }
+            ]
         },
         {
             "name": "Azdev Scripts",
