--- a/src/azure-cli/azure/cli/command_modules/mysql/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/mysql/linter_exclusions.yml
@@ -4,4 +4,8 @@ mysql flexible-server update:
       disable_data_encryption:
           rule_exclusions:
           - option_length_too_long
+
+mysql flexible-server export create:
+    rule_exclusions:
+      - missing_command_test_coverage
 ...
